erDiagram
    USER {
        int id_user PK
        string email
        string mot_de_passe
        string role "admin, auteur"
    }

    AUTEUR {
        int id_auteur PK
        int id_user FK "Relation 1-to-1"
        string nom
        string prenom
        string biographie
        string avatar
    }

    CATEGORIE {
        int id_categorie PK
        string nom
        string couleur
        string icone
    }

    ARTICLE {
        int id_article PK
        int id_categorie FK
        int id_auteur FK
        string titre
        text contenu
        string image_couverture
        string statut "brouillon, publie"
        date date_creation
        int vues
    }

    USER ||--o| AUTEUR : "possède un profil"
    CATEGORIE ||--o{ ARTICLE : "contient"
    AUTEUR ||--o{ ARTICLE : "rédige"
